#fix articlesListContainer min-height "auto" for avoid displaying out of boundaries

--- a/src/teachingPath/view/EditTeachingPath/AddItemModal/ArticlesList/ArticlesList.scss
+++ b/src/teachingPath/view/EditTeachingPath/AddItemModal/ArticlesList/ArticlesList.scss
@@ -83,7 +83,8 @@
     margin-top: 20px;
     padding: 0 10px 0 10px;
     overflow: auto;
-    min-height: 530px;
+    // min-height: 530px;
+    min-height: auto; // auto for avoid out of bounds
     .RelatedArticlesCard {
       margin: 10px 13px 10px 0;
       margin-right: 6px;
